@@ -3,6 +3,7 @@
 == 2.3.0
 
 * Ensure that for a concept all required concepts are executed including those required by concepts which are provided
+* Fixed an issue where the config properties `jqassistant.analyze.report.warn-on-severity` and `jqassistant.analyze.report.fail-on-severity` did not accept the value `NEVER`.
 
 == 2.2.0
 
